--- a/examples/kafka-cluster-ssl/docker-compose.yml
+++ b/examples/kafka-cluster-ssl/docker-compose.yml
@@ -1,107 +1,104 @@
 ---
-version: '2'
+version: '3.7'
 services:
   zookeeper-1:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:5.0.0
+    ports: 
+      - "22181:22181"
     environment:
       ZOOKEEPER_SERVER_ID: 1
       ZOOKEEPER_CLIENT_PORT: 22181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
-    network_mode: host
-    extra_hosts:
-      - "moby:127.0.0.1"
+      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-2:42888:43888
 
   zookeeper-2:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:5.0.0
+    ports: 
+      - "32181:32181"
     environment:
       ZOOKEEPER_SERVER_ID: 2
       ZOOKEEPER_CLIENT_PORT: 32181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
-    network_mode: host
-    extra_hosts:
-      - "moby:127.0.0.1"
+      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-2:42888:43888
 
   zookeeper-3:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:5.0.0
+    ports: 
+      - "42181:42181"
     environment:
       ZOOKEEPER_SERVER_ID: 3
       ZOOKEEPER_CLIENT_PORT: 42181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: localhost:22888:23888;localhost:32888:33888;localhost:42888:43888
-    network_mode: host
-    extra_hosts:
-      - "moby:127.0.0.1"
+      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-2:42888:43888
 
-  kafka-ssl-1:
-    image: confluentinc/cp-kafka:latest
-    network_mode: host
+  kafka-1:
+    image: confluentinc/cp-kafka:5.0.0
+    ports:
+      - "19092:19092"
     depends_on:
       - zookeeper-1
       - zookeeper-2
       - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: localhost:22181,localhost:32181,localhost:42181
-      KAFKA_ADVERTISED_LISTENERS: SSL://localhost:19092
-      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker1.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker1_keystore_creds
-      KAFKA_SSL_KEY_CREDENTIALS: broker1_sslkey_creds
-      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker1.truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker1_truststore_creds
-      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+      KAFKA_ZOOKEEPER_CONNECT: docker.for.mac.localhost:22181,docker.for.mac.localhost:32181,docker.for.mac.localhost:42181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://docker.for.mac.host.internal:19092
+      #KAFKA_ADVERTISED_LISTENERS: SSL://localhost:19092
+      #KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker1.keystore.jks
+      #KAFKA_SSL_KEYSTORE_CREDENTIALS: broker1_keystore_creds
+      #KAFKA_SSL_KEY_CREDENTIALS: broker1_sslkey_creds
+      #KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker1.truststore.jks
+      #KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker1_truststore_creds
+      #KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
-    extra_hosts:
-      - "moby:127.0.0.1"
 
-  kafka-ssl-2:
-    image: confluentinc/cp-kafka:latest
-    network_mode: host
+  kafka-2:
+    image: confluentinc/cp-kafka:5.0.0
+    ports:
+      - "29092:29092"
     depends_on:
       - zookeeper-1
       - zookeeper-2
       - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: localhost:22181,localhost:32181,localhost:42181
-      KAFKA_ADVERTISED_LISTENERS: SSL://localhost:29092
-      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker2.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker2_keystore_creds
-      KAFKA_SSL_KEY_CREDENTIALS: broker2_sslkey_creds
-      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker2.truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
-      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+      KAFKA_ZOOKEEPER_CONNECT: docker.for.mac.localhost:22181,docker.for.mac.localhost:32181,docker.for.mac.localhost:42181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://docker.for.mac.host.internal:29092
+      #KAFKA_ADVERTISED_LISTENERS: SSL://localhost:29092
+      #KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker2.keystore.jks
+      #KAFKA_SSL_KEYSTORE_CREDENTIALS: broker2_keystore_creds
+      #KAFKA_SSL_KEY_CREDENTIALS: broker2_sslkey_creds
+      #KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker2.truststore.jks
+      #KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
+      #KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
-    extra_hosts:
-      - "moby:127.0.0.1"
 
-  kafka-ssl-3:
-    image: confluentinc/cp-kafka:latest
-    network_mode: host
+  kafka-3:
+    image: confluentinc/cp-kafka:5.0.0
+    ports:
+      - "39092:39092"
     depends_on:
       - zookeeper-1
       - zookeeper-2
       - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 3
-      KAFKA_ZOOKEEPER_CONNECT: localhost:22181,localhost:32181,localhost:42181
-      KAFKA_ADVERTISED_LISTENERS: SSL://localhost:39092
-      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker3.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker3_keystore_creds
-      KAFKA_SSL_KEY_CREDENTIALS: broker3_sslkey_creds
-      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker3.truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
-      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+      KAFKA_ZOOKEEPER_CONNECT: docker.for.mac.localhost:22181,docker.for.mac.localhost:32181,docker.for.mac.localhost:42181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://docker.for.mac.host.internal:39092
+      #KAFKA_ADVERTISED_LISTENERS: SSL://localhost:39092
+      #KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker3.keystore.jks
+      #KAFKA_SSL_KEYSTORE_CREDENTIALS: broker3_keystore_creds
+      #KAFKA_SSL_KEY_CREDENTIALS: broker3_sslkey_creds
+      #KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker3.truststore.jks
+      #KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
+      #KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
-    extra_hosts:
-      - "moby:127.0.0.1"
