--- a/examples/kafka-cluster-ssl/docker-compose-plain.yml
+++ b/examples/kafka-cluster-ssl/docker-compose-plain.yml
@@ -37,8 +37,10 @@ services:
       ZOOKEEPER_SYNC_LIMIT: 2
       ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-2:42888:43888
 
-  broker1.test.confluent.io:
+  kafka-1:
     image: confluentinc/cp-kafka:5.0.0
+    ports:
+      - "19092:19092"
     depends_on:
       - zookeeper-1
       - zookeeper-2
@@ -46,18 +48,21 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: docker.for.mac.localhost:22181,docker.for.mac.localhost:32181,docker.for.mac.localhost:42181
-      KAFKA_ADVERTISED_LISTENERS: SSL://broker1.test.confluent.io:19092
-      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker1.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker1_keystore_creds
-      KAFKA_SSL_KEY_CREDENTIALS: broker1_sslkey_creds
-      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker1.truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker1_truststore_creds
-      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://docker.for.mac.host.internal:19092
+      #KAFKA_ADVERTISED_LISTENERS: SSL://localhost:19092
+      #KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker1.keystore.jks
+      #KAFKA_SSL_KEYSTORE_CREDENTIALS: broker1_keystore_creds
+      #KAFKA_SSL_KEY_CREDENTIALS: broker1_sslkey_creds
+      #KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker1.truststore.jks
+      #KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker1_truststore_creds
+      #KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
 
-  broker2.test.confluent.io:
+  kafka-2:
     image: confluentinc/cp-kafka:5.0.0
+    ports:
+      - "29092:29092"
     depends_on:
       - zookeeper-1
       - zookeeper-2
@@ -65,18 +70,21 @@ services:
     environment:
       KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: docker.for.mac.localhost:22181,docker.for.mac.localhost:32181,docker.for.mac.localhost:42181
-      KAFKA_ADVERTISED_LISTENERS: SSL://broker2.test.confluent.io:29092
-      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker2.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker2_keystore_creds
-      KAFKA_SSL_KEY_CREDENTIALS: broker2_sslkey_creds
-      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker2.truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
-      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://docker.for.mac.host.internal:29092
+      #KAFKA_ADVERTISED_LISTENERS: SSL://localhost:29092
+      #KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker2.keystore.jks
+      #KAFKA_SSL_KEYSTORE_CREDENTIALS: broker2_keystore_creds
+      #KAFKA_SSL_KEY_CREDENTIALS: broker2_sslkey_creds
+      #KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker2.truststore.jks
+      #KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
+      #KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
 
-  broker3.test.confluent.io:
+  kafka-3:
     image: confluentinc/cp-kafka:5.0.0
+    ports:
+      - "39092:39092"
     depends_on:
       - zookeeper-1
       - zookeeper-2
@@ -84,12 +92,13 @@ services:
     environment:
       KAFKA_BROKER_ID: 3
       KAFKA_ZOOKEEPER_CONNECT: docker.for.mac.localhost:22181,docker.for.mac.localhost:32181,docker.for.mac.localhost:42181
-      KAFKA_ADVERTISED_LISTENERS: SSL://broker3.test.confluent.io:39092
-      KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker3.keystore.jks
-      KAFKA_SSL_KEYSTORE_CREDENTIALS: broker3_keystore_creds
-      KAFKA_SSL_KEY_CREDENTIALS: broker3_sslkey_creds
-      KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker3.truststore.jks
-      KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
-      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://docker.for.mac.host.internal:39092
+      #KAFKA_ADVERTISED_LISTENERS: SSL://localhost:39092
+      #KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker3.keystore.jks
+      #KAFKA_SSL_KEYSTORE_CREDENTIALS: broker3_keystore_creds
+      #KAFKA_SSL_KEY_CREDENTIALS: broker3_sslkey_creds
+      #KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker3.truststore.jks
+      #KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
+      #KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
