--- a/examples/kafka-cluster-ssl/docker-compose.yml
+++ b/examples/kafka-cluster-ssl/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-2:42888:43888
+      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-3:42888:43888
 
   zookeeper-2:
     image: confluentinc/cp-zookeeper:5.0.0
@@ -23,7 +23,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-2:42888:43888
+      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-3:42888:43888
 
   zookeeper-3:
     image: confluentinc/cp-zookeeper:5.0.0
@@ -35,7 +35,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_INIT_LIMIT: 5
       ZOOKEEPER_SYNC_LIMIT: 2
-      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-2:42888:43888
+      ZOOKEEPER_SERVERS: zookeeper-1:22888:23888;zookeeper-2:32888:33888;zookeeper-3:42888:43888
 
   broker1.test.confluent.io:
     image: confluentinc/cp-kafka:5.0.0
@@ -45,7 +45,7 @@ services:
       - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: docker.for.mac.localhost:22181,docker.for.mac.localhost:32181,docker.for.mac.localhost:42181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:22181,zookeeper-2:32181,zookeeper-3:42181
       KAFKA_ADVERTISED_LISTENERS: SSL://broker1.test.confluent.io:19092
       KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker1.keystore.jks
       KAFKA_SSL_KEYSTORE_CREDENTIALS: broker1_keystore_creds
@@ -54,7 +54,7 @@ services:
       KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker1_truststore_creds
       KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
-      - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
+      - ./secrets:/etc/kafka/secrets
 
   broker2.test.confluent.io:
     image: confluentinc/cp-kafka:5.0.0
@@ -64,7 +64,7 @@ services:
       - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 2
-      KAFKA_ZOOKEEPER_CONNECT: docker.for.mac.localhost:22181,docker.for.mac.localhost:32181,docker.for.mac.localhost:42181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:22181,zookeeper-2:32181,zookeeper-3:42181
       KAFKA_ADVERTISED_LISTENERS: SSL://broker2.test.confluent.io:29092
       KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker2.keystore.jks
       KAFKA_SSL_KEYSTORE_CREDENTIALS: broker2_keystore_creds
@@ -73,7 +73,7 @@ services:
       KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
       KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
-      - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
+      - ./secrets:/etc/kafka/secrets
 
   broker3.test.confluent.io:
     image: confluentinc/cp-kafka:5.0.0
@@ -83,7 +83,7 @@ services:
       - zookeeper-3
     environment:
       KAFKA_BROKER_ID: 3
-      KAFKA_ZOOKEEPER_CONNECT: docker.for.mac.localhost:22181,docker.for.mac.localhost:32181,docker.for.mac.localhost:42181
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:22181,zookeeper-2:32181,zookeeper-3:42181
       KAFKA_ADVERTISED_LISTENERS: SSL://broker3.test.confluent.io:39092
       KAFKA_SSL_KEYSTORE_FILENAME: kafka.broker3.keystore.jks
       KAFKA_SSL_KEYSTORE_CREDENTIALS: broker3_keystore_creds
@@ -92,4 +92,4 @@ services:
       KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
       KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
-      - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
+      - ./secrets:/etc/kafka/secrets
