--- a/examples/kafka-cluster-ssl/docker-compose.yml
+++ b/examples/kafka-cluster-ssl/docker-compose.yml
@@ -2,7 +2,7 @@
 version: '2'
 services:
   zookeeper-1:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:5.1.0-1
     environment:
       ZOOKEEPER_SERVER_ID: 1
       ZOOKEEPER_CLIENT_PORT: 22181
@@ -15,7 +15,7 @@ services:
       - "moby:127.0.0.1"
 
   zookeeper-2:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:5.1.0-1
     environment:
       ZOOKEEPER_SERVER_ID: 2
       ZOOKEEPER_CLIENT_PORT: 32181
@@ -28,7 +28,7 @@ services:
       - "moby:127.0.0.1"
 
   zookeeper-3:
-    image: confluentinc/cp-zookeeper:latest
+    image: confluentinc/cp-zookeeper:5.1.0-1
     environment:
       ZOOKEEPER_SERVER_ID: 3
       ZOOKEEPER_CLIENT_PORT: 42181
@@ -41,7 +41,7 @@ services:
       - "moby:127.0.0.1"
 
   kafka-ssl-1:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:5.1.0-1
     network_mode: host
     depends_on:
       - zookeeper-1
@@ -57,7 +57,7 @@ services:
       KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker1.truststore.jks
       KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker1_truststore_creds
       KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
-      KAFKA_SSL_CLIENT_AUTH: requested
+      KAFKA_SSL_CLIENT_AUTH: required
       KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
@@ -65,7 +65,7 @@ services:
       - "moby:127.0.0.1"
 
   kafka-ssl-2:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:5.1.0-1
     network_mode: host
     depends_on:
       - zookeeper-1
@@ -81,7 +81,7 @@ services:
       KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker2.truststore.jks
       KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker2_truststore_creds
       KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
-      KAFKA_SSL_CLIENT_AUTH: requested
+      KAFKA_SSL_CLIENT_AUTH: required
       KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
@@ -89,7 +89,7 @@ services:
       - "moby:127.0.0.1"
 
   kafka-ssl-3:
-    image: confluentinc/cp-kafka:latest
+    image: confluentinc/cp-kafka:5.1.0-1
     network_mode: host
     depends_on:
       - zookeeper-1
@@ -105,7 +105,7 @@ services:
       KAFKA_SSL_TRUSTSTORE_FILENAME: kafka.broker3.truststore.jks
       KAFKA_SSL_TRUSTSTORE_CREDENTIALS: broker3_truststore_creds
       KAFKA_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM: " "
-      KAFKA_SSL_CLIENT_AUTH: requested
+      KAFKA_SSL_CLIENT_AUTH: required
       KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SSL
     volumes:
       - ${KAFKA_SSL_SECRETS_DIR}:/etc/kafka/secrets
